# lexical

./: .gitignore  Makefile  pyproject.toml  requirements_test.in  requirements_test.txt  setup.py
.github/workflows/: ci.yml
lexical/: __init__.py
lexical/tests/: code_line_generator_test.py  sql_test.py
